--- a/AUTHORS
+++ b/AUTHORS
@@ -3,3 +3,4 @@
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
 Ahmed Mohamed <ahmedmoh0107@gmail.com>
+abdelrhman mohammed <meemoo102039@gmail.com>
